--- a/cards.html
+++ b/cards.html
@@ -25,8 +25,9 @@
 <div class="card">
   <img src="pic/MicrosoftTeams-image (23).png" alt="Avatar" style="width: 100%; height: 250px;">
   <div class="container">
-    <h4><b>John Doe</b></h4>
-    <p>Architect & GNBH</p>
+    <h4 style="margin-left: 37%;"><b>HUAWEI</b></h4>
+    <p style="margin-left: 42%;">$750</p>
+    <button type="button" onclick="document.write(5+6)">Buy it</button>
   </div>
 </div>
 </body>
