--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
 <style>
 body, html {height: 100%}
-body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
+body,h1,h2,h3,h4,h5,h6 {font-family:monospace}
 .menu {display: none}
 .bgimg {
   background-repeat: no-repeat;
@@ -25,10 +25,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 <!-- Navbar (sit on top) -->
 <div class="w3-top w3-hide-small">
   <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
-    <a href="#" class="w3-bar-item w3-button">HOME</a>
-    <a href="#Brand" class="w3-bar-item w3-button">BRANDS</a>
-    <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-    <a href="#myMap" class="w3-bar-item w3-button">CONTACT</a>
+    <a href="index.html" class="w3-bar-item w3-button">HOME</a>
+    <a href="brands.html" class="w3-bar-item w3-button">BRANDS</a>
+    <a href="About Us..html" class="w3-bar-item w3-button">ABOUT US</a>
+    <a href="Contact Us.html" class="w3-bar-item w3-button">CONTACT US</a>
     
   </div>
 </div>
@@ -36,78 +36,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-bottomleft w3-padding">
-    <span class="w3-tag w3-xlarge">Open from 10am to 12pm</span>
+    <span class="w3-tag w3-xlarge">Open from 9am to 9pm</span>
   </div>
   <div class="w3-display-middle w3-center">
     <span class="w3-text-white w3-hide-small" style="font-size:100px">PHONE<br>MAZE</span>
   
-    <p><a href="#menu" class="w3-button w3-xxlarge w3-black">Go to the brands</a></p>
+
   </div>
 </header>
 
-<div class="gallery">
-<div class="content">
-  <img src="pic/MicrosoftTeams-image (19).png">
-  <h3>Apple</h3>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas porro quisquam, hic ut facere provident deserunt sed a, tempora iusto nulla. Et nisi fugiat dolorem ut totam! Nesciunt, necessitatibus. Minima?</p>
-<h6>$1000</h6>
-<ul>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star"></i></li>
-</ul>
-<button class="Buy-1">Buy Now</button>
-</div>
 
 
-<div class="content">
-  <img src="pic/MicrosoftTeams-image (19).png">
-  <h3>Apple</h3>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas porro quisquam, hic ut facere provident deserunt sed a, tempora iusto nulla. Et nisi fugiat dolorem ut totam! Nesciunt, necessitatibus. Minima?</p>
-<h6>$1000</h6>
-<ul>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star"></i></li>
-</ul>
-<button class="Buy-2">Buy Now</button>
-</div>
-
-<div class="content">
-  <img src="pic/MicrosoftTeams-image (19).png">
-  <h3>Apple</h3>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas porro quisquam, hic ut facere provident deserunt sed a, tempora iusto nulla. Et nisi fugiat dolorem ut totam! Nesciunt, necessitatibus. Minima?</p>
-<h6>$1000</h6>
-<ul>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star"></i></li>
-</ul>
-<button class="Buy-3">Buy Now</button>
-</div>
-
-
-<div class="content">
-  <img src="pic/MicrosoftTeams-image (19).png">
-  <h3>Apple</h3>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas porro quisquam, hic ut facere provident deserunt sed a, tempora iusto nulla. Et nisi fugiat dolorem ut totam! Nesciunt, necessitatibus. Minima?</p>
-<h6>$1000</h6>
-<ul>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star checked"></i></li>
-  <li><i class="fa fa-star"></i></li>
-</ul>
-<button class="Buy-4">Buy Now</button>
-</div>
-</div>
 
 </body>
 </html>
