--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <title>Home</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src="https://kit.fontawesome.com/1b42db18ee.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+<link rel="stylesheet" href="index.css">
 <style>
 body, html {height: 100%}
 body,h1,h2,h3,h4,h5,h6 {font-family:monospace}
@@ -46,7 +48,74 @@ body,h1,h2,h3,h4,h5,h6 {font-family:monospace}
 </header>
 
 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="">
+    <h2>Links</h2>
+    <div class="content">
+      <a href="index.html">Home|</a>
+      <a href="brands.html">Brands|</a>
+      <a href="About Us..html">About Us|</a>
+      <a href="Contact Us.html">Contact Us</a>
+      <div class="social">
+        <a href=""><span class="fab fa-facebook-f"></span></a>
+        <a href=""><span class="fab fa-instagram"></span></a>
+        <a href=""><span class="fab fa-twitter"></span></a>
+        <a href=""><span class="fab fa-youtube"></span></a>
+      </div>
+    </div>
+  </div>
+    </div>
+    <div class="col-md-4">
+      <div class="">
+        <h2>Contact Us</h2>
+        <div class="content">
+            <div class="phone">
+                <span class="fas fa-phone-alt"></span>
+                <span class="text">09 5350190</span>
+              </div>
+          <div class="phone">
+            <span class="fas fa-phone-alt"></span>
+            <span class="text">09 451222939</span>
+          </div>
+          <div class="email">
+            <span class="fas fa-envelope"></span>
+            <span class="text">phonemazeonlineshopping@gmial.com</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="">
+        <h2>Newsletter</h2>
+        <div class="content">
+          <form action="#">
+            <div class="email">
+              <div class="text">Email:</div>
+              <input type="email" required>
+            </div>
+            <div class="btn">
+              <button type="submit">SUBRSCRIBE</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
+  
+  
+ 
 
+<div class="bottom">
+  <center>
+    </span>
+    © Copyright 2023 www.edusn.co.uk. All rights reserved. Developed by Phone Maze.
+  </center>
+</div>
+
+</footer>
 
 </body>
 </html>
